--- a/templates/profilesystem/pinfo.html
+++ b/templates/profilesystem/pinfo.html
@@ -2,7 +2,7 @@
 {% if request.user.profile.avatar %}
     <img src="{{ request.user.profile.avatar.thumbnail.128x128 }}" class="profile-user-img img-responsive img-circle useravatar" alt="User Image" data-target="#imgModal" data-toggle="modal">
 {% else %}
-    <div class="default-avatar" data-target="#imgModal" data-toggle="modal" id="avatar" style="left: 30%; margin-bottom: 10px; background: {{ request.user.profile.default_avatar_color }}">
+    <div class="default-avatar default-avatar-profile-info" data-target="#imgModal" data-toggle="modal" id="avatar" style="background: {{ request.user.profile.default_avatar_color }}">
         <div class="default-avatar-text-wrapper">
             <div class="default-avatar-text">
                 {% user_initial request.user %}
