--- a/templates/publicusers/users.html
+++ b/templates/publicusers/users.html
@@ -2,14 +2,14 @@
 {% paginate 12 users %}
 <div class="member-wrapper">
     {% for user in users %}
-        <div class="member {% if user.is_staff %}member-staff{% endif %}" data-id="{{ user.id }}">
+        <div class="member {% if user.is_staff %}member-staff{% endif %} {% if user.profile.online %}member-online{% endif %}" data-id="{{ user.id }}">
             <a href="{% url 'publicusers:user' user.id %}">
                 <div class="member-image">
                     {% if user.profile.avatar_public %}
                         {% if user.profile.avatar %}
                             <img src="{{ user.profile.avatar.thumbnail.128x128 }}" alt="User Image">
                         {% else %}
-                            <div class="default-avatar" style="background: {{ user.profile.default_avatar_color }}; width: 95px; height: 95px; left: 5%">
+                            <div class="default-avatar default-avatar-memberl" style="background: {{ user.profile.default_avatar_color }};">
                                 <div class="default-avatar-text-wrapper">
                                     <div class="default-avatar-text">
                                         {% user_initial user %}
@@ -18,7 +18,7 @@
                             </div>
                         {% endif %}
                     {% else %}
-                    <div class="default-avatar" style="background: {{ user.profile.default_avatar_color }}; width: 95px; height: 95px; left: 5%">
+                    <div class="default-avatar default-avatar-memberl" style="background: {{ user.profile.default_avatar_color }};">
                         <div class="default-avatar-text-wrapper">
                             <div class="default-avatar-text">
                                 {% user_initial user %}
@@ -26,15 +26,9 @@
                         </div>
                     </div>
                     {% endif %}
-                    <p class="users-list-date userstatus" data-user-id='{{ user.id }}'>
-                        {% if user.profile.online %}
-                            <i class="fa fa-circle text-success onlinestatus"></i>
-                        {% else %}
-                            <i class="fa fa-circle onlinestatus"></i>
-                        {% endif %}
-                    </p>
                 </div>
                 <div class="member-info">
+                    <p class="init-chat" data-url='{% url 'messaging:create' user.id %}'><i class="fa fa-comments-o"></i></p>
                     <p class="member-username">{{ user.username }}</p>
                     <p class="member-status">{% if user.is_staff %}{% trans "Staff" %}{% else %}{% trans "Member" %}{% endif %}</p>
                 </div>
