[FIX][CSS] Green corner in members tile [FIX][CSS] Responsiveness issue [FIX][HTML] Member online page was showing old template

--- a/templates/base.html
+++ b/templates/base.html
@@ -36,7 +36,7 @@
     <link rel="manifest" href="/manifest.json">
     {% compress css %}
     <!-- Theme style -->
-    <link rel="stylesheet" href="{% static "dist/css/AdminLTE.css" %}?v=8.7.2">
+    <link rel="stylesheet" href="{% static "dist/css/AdminLTE.css" %}?v=8.7.3">
     <!-- AdminLTE Skins. Choose a skin from the css/skins
        folder instead of downloading all of them to reduce the load. -->
     <link rel="stylesheet" href="{% static "dist/css/skins/skin-blue.css" %}?v=1.0.12">
@@ -859,6 +859,7 @@
     {% endcompress %}
     {% block extrascripts %}
     {% endblock extrascripts %}
+    {% comment %}
     {% ifequal SITE_TYPE 'beta' %}
     <script type="text/javascript">
         (function() {
@@ -872,6 +873,7 @@
         })();
     </script>
     {% endifequal %}
+    {% endcomment %}
     <script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async='async'></script>
     <script>
     var OneSignal = window.OneSignal || [];
