--- a/templates/publicusers/userdetails.html
+++ b/templates/publicusers/userdetails.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load i18n staticfiles compress %}
 {% block title %}
-    {{ user.username }} | Basic Income Project
+    {{ user.username }} | Ekata Social
 {% endblock title %}
 
 
