--- a/templates/messagingsystem/chat_float.html
+++ b/templates/messagingsystem/chat_float.html
@@ -1,28 +1,27 @@
 {% load staticfiles i18n %}
 <div class="col-md-3" id="msgbox" data-name="{{ chat.name }}">
-    <div class="box box-primary direct-chat direct-chat-primary">
+    <div class="box direct-chat direct-chat-primary">
         <div class="box-header with-border" id="loadmsg">
             <h3 class="box-title">
                 {% for subscriber in chat.subscribers.all %}
                     {% ifequal request.user subscriber %}
                     {% else %}
                         {{ subscriber.username }}
-                        <i class="fa fa-circle onlinestatus" id="status"></i>
                         <script>
                             (function getOnline(){
                                 $.ajax({
                                     url: '{% url 'publicusers:getonline' subscriber.id %}',
                                     success: function(data) {
-                                        var userstatus = $('#status');
+                                        var userstatus = $('.direct-chat-primary');
                                         if (data.is_online) {
-                                            $(userstatus).addClass('text-success');
+                                            $(userstatus).addClass('box-success');
                                         }
                                         else {
-                                            $(userstatus).removeClass('text-success');
+                                            $(userstatus).removeClass('box-success');
                                         }
                                     },
                                     complete: function() {
-                                        setTimeout(getOnline, 15000);   
+                                        setTimeout(getOnline, 15000);
                                     }
                                 });
                             })();
