--- a/templates/messagingsystem/index.html
+++ b/templates/messagingsystem/index.html
@@ -177,6 +177,7 @@
                                         scrollTo: $('.direct-chat-messages')[0].scrollHeight,
                                     });
                                     $(".emojionearea-editor").text('');
+                                    $(".emojionearea-editor").focus();
                                     convertEmojis(true);
                                 }
                             });
@@ -238,6 +239,7 @@
                             scrollTo: $('.direct-chat-messages')[0].scrollHeight,
                         });
                         $('.emojionearea-editor').text('');
+                        $(".emojionearea-editor").focus();
                         convertEmojis(true);
                     }
                 });
@@ -258,7 +260,7 @@
             content: function () {
                 return $(this).siblings('.optioncontent').html();
             },
-            placement: 'bottom',
+            placement: 'left',
             container: 'body',
             selector: '.options',
             trigger: 'click'
