[CHANGED] Messaging delete only one side [CHANGED] Users to Members in landing navbar

--- a/templates/profilesystem/index.html
+++ b/templates/profilesystem/index.html
@@ -401,7 +401,7 @@
                             <section class="table-responsive">
                                 <table class="table table-condensed">
                                     <tr>
-                                        <td>{% trans "Users" %}</td>
+                                        <td>{% trans "Members" %}</td>
                                         <td></td>
                                         <td align="right">
                                             <input type="checkbox" {% if request.user.profile.users_link_visible %}checked{% endif %} data-toggle="toggle" data-onstyle="success" data-offstyle="danger" data-on="Visible" data-off="Invisible" id="users_link_visible">
