Changed fa class

--- a/templates/messagingsystem/chat_float.html
+++ b/templates/messagingsystem/chat_float.html
@@ -30,7 +30,7 @@
                 {% endfor %}
             </h3>
             <div class="box-tools pull-right">
-                <button type="button" class="btn btn-box-tool deleteconv" data-toggle="tooltip" title="{% trans "Unsubscribe From This Conversation" %}" data-room-id={{ chat.id }}><i class="fa fa-trash-o"></i></button>
+                <button type="button" class="btn btn-box-tool deleteconv" data-toggle="tooltip" title="{% trans "Unsubscribe From This Conversation" %}" data-room-id={{ chat.id }}><i class="fa fa-archive"></i></button>
                 <button type="button" class="btn btn-box-tool" data-toggle="tooltip" title="{% trans "Close Conversation" %}" id="msgclose"><i class="fa fa-times"></i></button>
             </div>
         </div>
