[FIXED] No autocompletion in transfer field [ADDED] Add transaction fee when making transaction

--- a/templates/useraccount/index.html
+++ b/templates/useraccount/index.html
@@ -253,10 +253,12 @@
             })
         });
     }
+    {% comment %}
     function getEkataUnitsInfo() {
         var url = '{% url 'myaccount:ekata_units_info' %}';
         $("#accountInfo").load(url);
     }
+    {% endcomment %}
     $("#ekataUnitsSubscribe").on('click', function(){
         $(this).text("Subscribing...");
         var url = '{% url 'myaccount:subscribe_ekata_units' %}';
