--- a/templates/useraccount/index.html
+++ b/templates/useraccount/index.html
@@ -247,10 +247,10 @@
                 li.find('p').append(img).append(item.value);
                 return li.appendTo(ul);
             };
-            $("#ekataUnitsInfo").slimscroll({
+            /*$("#ekataUnitsInfo").slimscroll({
                 height: '200px',
                 size: '3px'
-            })
+            })*/
         });
     }
     {% comment %}
