--- a/templates/account/verification_sent.html
+++ b/templates/account/verification_sent.html
@@ -7,6 +7,6 @@
 {% block content %}
     <h1>{% trans "Verify Your E-mail Address" %}</h1>
 
-    <p>{% blocktrans %}We have sent an e-mail to you for verification. Follow the link provided to finalize the signup process. Please contact us at support@ekata.social if you do not receive it within a few minutes.{% endblocktrans %}</p>
+    <p>{% blocktrans %}We are requiring all emails be verified, please check your email and follow the instructions sent.{% endblocktrans %}</p>
 
 {% endblock %}
