--- a/templates/landing_base.html
+++ b/templates/landing_base.html
@@ -155,7 +155,7 @@
 										<li><a href="{% url 'landing:newses' %}">{% trans "News" %}</a></li>
 									</ul>
 								</div>
-								<div class="link-wrapper">
+								<div class="link-wrapper socials">
 									<h2>{% trans "Social" %}</h2>
 									<ul class="soc">
 										<li><a class="soc-twitter" href="https://twitter.com/ekatasocial"></a></li>
