--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -35,5 +35,5 @@
 <br />
 <a href="{{ signup_url }}" class="text-center">{% trans "Register a new membership" %}</a>
 <br />
-<a href="{% url 'landing:index' %}#contactrequestform">{% trans "Difficulty with login, please send us a message" %}</a>
+<a href="{% url 'landing:index' %}#contactrequest">{% trans "Difficulty with login, please send us a message" %}</a>
 {% endblock %}
