--- a/templates/landing_base.html
+++ b/templates/landing_base.html
@@ -36,7 +36,7 @@
     	<link rel="stylesheet" href="{% static "dist/css/bootstrap-notify.css" %}">
 
 		<!-- custom css -->
-		<link rel="stylesheet" href="{% static "dist/css/templatemo-style.css" %}?v=2.1.2">
+		<link rel="stylesheet" href="{% static "dist/css/templatemo-style.css" %}?v=2.1.3">
 
 		{% endcompress %}
 		{% block extrastyles %}
@@ -189,7 +189,7 @@
 								</address>
 							</div>
 						</div>
-						<div class="col-md-4 col-sm-10 col-sm-offset-1 col-md-offset-0 wow fadeInUp contactform" data-wow-delay="0.6s">
+						<div class="col-md-4 col-sm-10 col-sm-offset-1 col-md-offset-0 wow fadeInUp contactform" data-wow-delay="0.6s" id="contactrequest">
 							<div class="contact-form">
 								<form action="{% url 'landing:sendcontactrequest' %}" method="post" id="contactrequestform">
 									{% csrf_token %}
